Fix bug 82370, leak in disk cache.  r=dbaron, sr=darin, a=asa.